# seminar_magnetic_field_particle_simulation

Dokumentation/Diagramme/: classes.xmi
Latex/: .gitignore  abstract.tex  algorithmus.tex  ausblick.tex  einleitung.tex  erklaerung.tex  grundlagen.tex  implementierung.tex  main.tex
Latex/arbeit/: abstract.tex  algorithmus.tex  build.sh  einleitung.tex  grundlagen.tex  implementierung.tex  main.tex  titel.tex
Latex/common/: config.tex  references.bib
Latex/geogebra/files/: local_movement.ggb  winkel.ggb  winkel_v.ggb
Latex/gnuplot/: homogeneous.tex
Latex/praesentation/: .gitignore  algorithmus.tex  ausblick.tex  erklaerung.tex  grundlagen.tex  implementierung.tex  main.tex  motivation.tex
Software/: .gitignore  CMakeLists.txt
Software/doc/: Doxyfile
Software/examples/: fading_field.cpp  field_with_plane.cpp  homogeneous_field.cpp  plot.h  stop_on_plane.cpp  testplot.cpp  two_homogeneous_fields.cpp
Software/include/: conditions.h  fields.h  foo.h  particle.h  plane3d.h  propagator.h  vector3d.h
Software/src/: foo.cpp  main.cpp  particle.cpp  propagator.cpp  vector3d.cpp
Software/testcases/: propagator_test.cpp  vector3d_test.cpp
